--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ email: john.gage@berkeley.edu
 description: >-
   Materials relevant to Sudan water resources
 
-baseurl:  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
-url:                      # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /oct1 # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
+url: https://johngage.github.io                # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #######################################################################################
